# OxiRun

./: .gitignore  Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-1-link  flake-profile-2-link
.github/workflows/: rust.yaml
assets/: example_config.toml
nix/: applications.nix  default.nix  hm.nix
oxirun/: Cargo.toml
oxirun-plugins/: Cargo.toml
oxirun-plugins/src/: lib.rs
oxirun/src/: config.rs  main.rs  plugins.rs  utils.rs
plugins/applications/: Cargo.toml
plugins/applications/src/: config.rs  lib.rs
src/: applications.rs  config.rs  main.rs
