[package]
name = "oxirun"
version = "0.1.0"
edition = "2024"
description = "A clipboard manager daemon written in Rust."
license = "GPL-3.0-only"

[dependencies]
oxilib = "0.1.2"
oxiced = "0.5.0"
iced = { version = "0.13.1", features = ["advanced", "canvas", "image", "svg"] }
iced_layershell = "0.12.0"                                                       # broken on later versions
xdg = "3.0.0"
fuzzy-matcher = "0.3.7"
toml = "0.8.21"
serde = "1.0.219"
optional_struct = "0.5.2"
libloading = "0.8.8"
