[package]
name = "oxirun"
version = "0.2.0"
edition = "2024"
description = "A clipboard manager daemon written in Rust."
license = "GPL-3.0-only"

[dependencies]
iced = { version = "0.14.0-dev", features = [
	"advanced",
	"tokio",
	"canvas",
	"image",
	"svg",
], git = "https://github.com/iced-rs/iced", rev="bfc27e4691875840010e3d1e282b8e26b821c569" }
iced_layershell = { version = "0.14.0-dev", git = "https://github.com/DashieTM/exwlshelleventloop"}
oxilib = "0.1.2"
oxiced = { git = "https://github.com/Xetibo/oxiced", branch = "iced14" }
xdg = "3.0.0"
fuzzy-matcher = "0.3.7"
toml = "0.9.8"
serde = "1.0.228"
optional_struct = "0.5.2"
libloading = "0.8.9"
once_cell = "1.21.3"
