[package]
name = "applications"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]
iced = { version = "0.13.1", features = ["advanced", "canvas", "image", "svg"] }
fuzzy-matcher = "0.3.7"
oxiced = "0.4.0"
toml = "0.8.22"
serde = "1.0.219"
optional_struct = "0.5.2"
xdg = "2.5.2"
