[package]
name = "applications"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]
iced = { version = "0.14.0-dev", features = [
	"advanced",
	"canvas",
	"image",
	"svg",
	"tokio",
], git = "https://github.com/iced-rs/iced" }
fuzzy-matcher = "0.3.7"
oxiced = "0.5.0"
toml = "0.9.5"
serde = "1.0.219"
optional_struct = "0.5.2"
xdg = "3.0.0"
