[package]
name = "applications"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]
iced = { version = "0.14.0-dev", features = [
	"advanced",
	"tokio",
	"canvas",
	"image",
	"svg",
], git = "https://github.com/iced-rs/iced", rev="bfc27e4691875840010e3d1e282b8e26b821c569" }
fuzzy-matcher = "0.3.7"
oxiced = "0.5.0"
toml = "0.9.5"
serde = "1.0.219"
optional_struct = "0.5.2"
xdg = "3.0.0"
